<resources>
    <string name="app_name">QiitaViewer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_articles">All Articles</string>
    <string name="favourite_articles">Favourite Articles</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourites</string>
    <string name="stock">Stocks</string>
    <string name="lecture">Lectures</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="like">Like</string>
    <string name="user">User</string>
    <string name="login">LogIn</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="nothing_to_show">Nothing to show!!</string>
    <string name="have_to_login">You have to login to Qiita</string>
    <string name="client_id">bc3deb1194eff0ce4fd62e4d9e0e9fc628f942ea</string>
    <string name="scope">read_qiita+write_qiita</string>
    <string name="authorize_uri">https://qiita.com/api/v2/oauth/authorize?client_id=bc3deb1194eff0ce4fd62e4d9e0e9fc628f942ea&amp;scope=read_qiita+write_qiita&amp;state=ab6s5adw121wsa2120ed7fe1</string>
</resources>